src/objects/BMCServiceDesk__BMC_Printer__c.object
<CustomObject>
    <description>BMC_Printer. CMDB Class that stores information about local and network printers.   This class corresponds to the DMTF CIM_Printer class.</description>
    <fields>
        <fullName>BMCServiceDesk__AveragePagesPerMinute__c</fullName>
        <label>Average Pages Per Minute</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__HorizontalResolution__c</fullName>
        <label>Horizontal Resolution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>38</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__MarkingTechnology__c</fullName>
        <label>Marking Technology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Electrophotographic LED</fullName>
                </value>
                <value>
                    <fullName>Electrophotographic Laser</fullName>
                </value>
                <value>
                    <fullName>Electrophotographic Other</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Dot Matrix 9pin</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Dot Matrix 24pin</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Dot Matrix Other</fullName>
                </value>
                <value>
                    <fullName>Impact Moving Head Fully Formed</fullName>
                </value>
                <value>
                    <fullName>Impact Band</fullName>
                </value>
                <value>
                    <fullName>Impact Other</fullName>
                </value>
                <value>
                    <fullName>Inkjet Aqueous</fullName>
                </value>
                <value>
                    <fullName>Inkjet Solid</fullName>
                </value>
                <value>
                    <fullName>Inkjet Other</fullName>
                </value>
                <value>
                    <fullName>Pen</fullName>
                </value>
                <value>
                    <fullName>Thermal Transfer</fullName>
                </value>
                <value>
                    <fullName>Thermal Sensitive</fullName>
                </value>
                <value>
                    <fullName>Thermal Diffusion</fullName>
                </value>
                <value>
                    <fullName>Thermal Other</fullName>
                </value>
                <value>
                    <fullName>Electroerosion</fullName>
                </value>
                <value>
                    <fullName>Electrostatic</fullName>
                </value>
                <value>
                    <fullName>Photographic Microfiche</fullName>
                </value>
                <value>
                    <fullName>Photographic Imagesetter</fullName>
                </value>
                <value>
                    <fullName>Photographic Other</fullName>
                </value>
                <value>
                    <fullName>Ion Deposition</fullName>
                </value>
                <value>
                    <fullName>eBeam</fullName>
                </value>
                <value>
                    <fullName>Typesetter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__NumberOfTrays__c</fullName>
        <label>Number Of Trays</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PaperSizesSupported__c</fullName>
        <label>Paper Sizes Supported</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PortName__c</fullName>
        <label>Port Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrinterCapabilities__c</fullName>
        <label>Printer Capabilities</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrinterLanguageList__c</fullName>
        <label>Printer Language List</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PrinterType__c</fullName>
        <label>Printer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Local Printer</fullName>
                </value>
                <value>
                    <fullName>Network Printer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__VerticalResolution__c</fullName>
        <label>Vertical Resolution</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Printer</label>
    <nameField>
        <label>BMC_Printer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Printers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>